--- a/index.html
+++ b/index.html
@@ -145,6 +145,36 @@
                     <a href="https://github.com/iiioff/CodingClubWebsite" target="_blank">GitHub repository</a>
                 </div>
             </div>
+            <div class="card">
+                <img src="https://cloud-irvjdgbf5-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Eric's Website</h3>
+                <p>Grade 8</p>
+                <p>My website tells people what my favorite anime is and which anime is the goat</p>
+                <div class="links">
+                    <a href="https://rricce.github.io/Hak-Klub/" target="_blank">View website</a>
+                    <a href="https://github.com/rricce/Hak-Klub" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-nqmqyvb46-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Austin's Website</h3>
+                <p>Grade 8</p>
+                <p>My website teaches people how to make soup</p>
+                <div class="links">
+                    <a href="https://austinli5.github.io/NzE0NzU1MTE2MzY2/" target="_blank">View website</a>
+                    <a href="https://github.com/austinli5/NzE0NzU1MTE2MzY2" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-q8jam2sa5-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Ian's Website</h3>
+                <p>Grade 8</p>
+                <p>My website teaches people about pandas and gives them entertaining duck videos</p>
+                <div class="links">
+                    <a href="https://frozenpancakes.github.io" target="_blank">View website</a>
+                    <a href="https://github.com/FrozenPancakes/FrozenPancakes.github.io" target="_blank">GitHub repository</a>
+                </div>
+            </div>
 
             <!-- Grade 7 -->
             <div class="card">
@@ -345,6 +375,16 @@
                 <div class="links">
                     <a href="https://dragonrazor.github.io/hac-club/" target="_blank">View website</a>
                     <a href="https://github.com/Dragonrazor/hac-club" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-7ym6mkit6-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Eddie's Website</h3>
+                <p>Grade 7</p>
+                <p>My website talks about parakeets aka budgies aka small birds</p>
+                <div class="links">
+                    <a href="https://ilikelemonade242.github.io/birds/" target="_blank">View website</a>
+                    <a href="https://github.com/Ilikelemonade242/birds" target="_blank">GitHub repository</a>
                 </div>
             </div>
 
