--- a/index.html
+++ b/index.html
@@ -175,6 +175,16 @@
                     <a href="https://github.com/FrozenPancakes/FrozenPancakes.github.io" target="_blank">GitHub repository</a>
                 </div>
             </div>
+            <div class="card">
+                <img src="https://cloud-dyqkllutn-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Joshua's Website</h3>
+                <p>Grade 8</p>
+                <p>My website is here to look cool.</p>
+                <div class="links">
+                    <a href="https://rexthe-hamster.github.io/hackclub/" target="_blank">View website</a>
+                    <a href="https://github.com/rexthe-hamster/hackclub/" target="_blank">GitHub repository</a>
+                </div>
+            </div>
 
             <!-- Grade 7 -->
             <div class="card">
@@ -387,6 +397,26 @@
                     <a href="https://github.com/Ilikelemonade242/birds" target="_blank">GitHub repository</a>
                 </div>
             </div>
+            <div class="card">
+                <img src="https://cloud-gz8zpqkcd-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Theodore's Website</h3>
+                <p>Grade 7</p>
+                <p>My website shows how diffrent types of electric pokemon generate their electricity.</p>
+                <div class="links">
+                    <a href="https://questionablebombs.github.io/Newt/" target="_blank">View website</a>
+                    <a href="https://github.com/questionablebombs/Newt" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-paticvn5e-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Soraiya's Website</h3>
+                <p>Grade 7</p>
+                <p>My website is all about sushi!<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://soraiyaeatssushi.github.io/Soraiyaisamazing/" target="_blank">View website</a>
+                    <a href="https://github.com/Soraiyaeatssushi/Soraiyaisamazing" target="_blank">GitHub repository</a>
+                </div>
+            </div>
 
             <!-- Grade 6 -->
             <div class="card">
@@ -407,6 +437,16 @@
                 <div class="links">
                     <a href="https://ohiodez.github.io/Coding-club/index.html" target="_blank">View website</a>
                     <a href="https://github.com/ohioDez/Coding-club" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-6hkvtk5s1-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Taddeo's Website</h3>
+                <p>Grade 6</p>
+                <p>My website is to inform people about beans.<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://immegamind.github.io/Hackclub-webstie/" target="_blank">View website</a>
+                    <a href="https://github.com/IMMEGAMIND/Hackclub-webstie" target="_blank">GitHub repository</a>
                 </div>
             </div>
             
