--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
             <div class="card">
                 <img src="https://cloud-5v5qjt9rs-hack-club-bot.vercel.app/0image.png" alt="">
-                <h3>Ades' Website</h3>
+                <h3>Austin's Website</h3>
                 <p>Grade 8</p>
                 <p>My website wants to teach people about Ades (me)</p>
                 <div class="links">
