--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <img src="https://cloud-q8jam2sa5-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Ian's Website</h3>
                 <p>Grade 8</p>
-                <p>My website teaches people about pandas and gives them entertaining duck videos</p>
+                <p>My website teaches people about ducks and gives them entertaining duck videos</p>
                 <div class="links">
                     <a href="https://frozenpancakes.github.io" target="_blank">View website</a>
                     <a href="https://github.com/FrozenPancakes/FrozenPancakes.github.io" target="_blank">GitHub repository</a>
@@ -447,6 +447,16 @@
                 <div class="links">
                     <a href="https://immegamind.github.io/Hackclub-webstie/" target="_blank">View website</a>
                     <a href="https://github.com/IMMEGAMIND/Hackclub-webstie" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-o2i42cfzq-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Ian's Website</h3>
+                <p>Grade 6</p>
+                <p>My website is about cats<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://h0ghast.github.io/Cool-web/" target="_blank">View website</a>
+                    <a href="https://github.com/h0ghast/Cool-web/" target="_blank">GitHub repository</a>
                 </div>
             </div>
             
