--- a/index.html
+++ b/index.html
@@ -459,6 +459,16 @@
                     <a href="https://github.com/h0ghast/Cool-web/" target="_blank">GitHub repository</a>
                 </div>
             </div>
+            <div class="card">
+                <img src="https://cloud-6qwitilni-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Evan's Website</h3>
+                <p>Grade 6</p>
+                <p>My website is about cats 'cuz they're so obviously the best thing on the planet and possibly the universe (dogs and red pandas come in a close second tho >w<)</p>
+                <div class="links">
+                    <a href="https://evanthecat422.github.io/cats/" target="_blank">View website</a>
+                    <a href="https://github.com/Evanthecat422/cats" target="_blank">GitHub repository</a>
+                </div>
+            </div>
             
         </div>
     </div>
