--- a/index.html
+++ b/index.html
@@ -126,6 +126,16 @@
                 </div>
             </div>
             <div class="card">
+                <img src="https://cloud-6ylpn9oqx-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Binesh's Website</h3>
+                <p>Grade 8</p>
+                <p>My website is a fun memory game where you input colors based on a sequence of flashes.</p>
+                <div class="links">
+                    <a href="https://pufferfishman.github.io/simon-says/" target="_blank">View website</a>
+                    <a href="https://github.com/pufferfishman/simon-says" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
                 <img src="https://cloud-qafkaqm9j-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Yunseo's Website</h3>
                 <p>Grade 8</p>
@@ -183,6 +193,66 @@
                 <div class="links">
                     <a href="https://rexthe-hamster.github.io/hackclub/" target="_blank">View website</a>
                     <a href="https://github.com/rexthe-hamster/hackclub/" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-3v9x6n8kb-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Kayla's Website</h3>
+                <p>Grade 8</p>
+                <p>My website is about Taekwondo!</p>
+                <div class="links">
+                    <a href="https://snowy-birb.github.io/TKD/" target="_blank">View website</a>
+                    <a href="https://github.com/Snowy-birb/TKD" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-15m4d2b6e-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Juan's Website</h3>
+                <p>Grade 8</p>
+                <p>My website gives 3 facts about the cartoon character Pink Panther.</p>
+                <div class="links">
+                    <a href="https://1610pm.github.io/Hack-Club-2/" target="_blank">View website</a>
+                    <a href="https://github.com/1610PM/Hack-Club-2" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-a2x4wn7fc-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Ziheng's Website</h3>
+                <p>Grade 8</p>
+                <p>to add to the "sources i used during reasearch" part of assignments for fun :D</p>
+                <div class="links">
+                    <a href="https://smileyziheng.github.io/Research-centre/" target="_blank">View website</a>
+                    <a href="https://github.com/smileyziheng/Research-centre/" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-idojwe3dl-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Benjamin's Website</h3>
+                <p>Grade 8</p>
+                <p>My website teaches people about the solar system</p>
+                <div class="links">
+                    <a href="https://nicekid69.github.io/Hack-Club-Website/" target="_blank">View website</a>
+                    <a href="https://github.com/NiceKid69/Hack-Club-Website" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-ayu8aelj0-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Elliana's Website</h3>
+                <p>Grade 8</p>
+                <p>my website teaches about jellyfish<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://elli566.github.io/hack-club-4.0/" target="_blank">View website</a>
+                    <a href="https://github.com/Elli566/hack-club-4.0" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-mfyb2dov7-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Milana's Website</h3>
+                <p>Grade 8</p>
+                <p>mMy website teaches people about what you need to own a hamster.</p>
+                <div class="links">
+                    <a href="https://sapphireripple.github.io/fun/" target="_blank">View website</a>
+                    <a href="https://github.com/SapphireRipple/fun" target="_blank">GitHub repository</a>
                 </div>
             </div>
 
@@ -358,7 +428,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://cloud-5m2flekj7-hack-club-bot.vercel.app/0image.png" alt="">
+                <img src="https://cloud-dlic9uzgy-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Christina's Website</h3>
                 <p>Grade 7</p>
                 <p>My website teaches people about bunnies<br>&nbsp;</p>
@@ -417,6 +487,76 @@
                     <a href="https://github.com/Soraiyaeatssushi/Soraiyaisamazing" target="_blank">GitHub repository</a>
                 </div>
             </div>
+            <div class="card">
+                <img src="https://cloud-8smlsgh7u-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Evan's Website</h3>
+                <p>Grade 7</p>
+                <p>My website shows the sizes of people in my class.</p>
+                <div class="links">
+                    <a href="https://magikv.github.io/Magik/" target="_blank">View website</a>
+                    <a href="https://github.com/MagikV/Magik" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-dvstv55v5-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Deeksha's Website</h3>
+                <p>Grade 7</p>
+                <p>My website is about black footed ferrets.</p>
+                <div class="links">
+                    <a href="https://deeksha-34.github.io/Hack-/" target="_blank">View website</a>
+                    <a href="https://github.com/deeksha-34/Hack-" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-dfp93op2f-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Christian's Website</h3>
+                <p>Grade 7</p>
+                <p>My website provides multiple form of entertainment by providing links to multiple fun websites with games, videos and more!</p>
+                <div class="links">
+                    <a href="https://coderchristianlee.github.io/Christian_Website/" target="_blank">View website</a>
+                    <a href="https://github.com/CoderChristianLee/Christian_Website" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-9l12r4n84-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Aaron's Website</h3>
+                <p>Grade 7</p>
+                <p>To show what is a monkey does<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://aaronzxu.github.io/Website/" target="_blank">View website</a>
+                    <a href="https://github.com/AaronZXU/Website/" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-oyg94xuen-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Emily's Website</h3>
+                <p>Grade 7</p>
+                <p>My website teaches people about tigers<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://gummybear143.github.io/tiger/" target="_blank">View website</a>
+                    <a href="https://github.com/gummybear143/tiger" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-3ab69u6b1-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Rudy's Website</h3>
+                <p>Grade 7</p>
+                <p>My website teaches about ragdoll cats<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://rudythegreathacker.github.io/hack-club/" target="_blank">View website</a>
+                    <a href="https://github.com/rudythegreathacker/hack-club" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-byxakd89m-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Michael's Website</h3>
+                <p>Grade 7</p>
+                <p>My website is to inform people about the benefits of cats!</p>
+                <div class="links">
+                    <a href="https://just4im.github.io/Hxck-Club/" target="_blank">View website</a>
+                    <a href="https://github.com/Just4im/Hxck-Club" target="_blank">GitHub repository</a>
+                </div>
+            </div>
 
             <!-- Grade 6 -->
             <div class="card">
@@ -469,7 +609,76 @@
                     <a href="https://github.com/Evanthecat422/cats" target="_blank">GitHub repository</a>
                 </div>
             </div>
-            
+            <div class="card">
+                <img src="https://cloud-p3rdlgfo3-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Joanna's Website</h3>
+                <p>Grade 6</p>
+                <p>My website teaches people about some different kinds of eyes!</p>
+                <div class="links">
+                    <a href="https://joannal2279.github.io/joanna/" target="_blank">View website</a>
+                    <a href="https://github.com/joannaL2279/joanna" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-i5xh1ur4p-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Jeremy's Website</h3>
+                <p>Grade 6</p>
+                <p>My website tells people about the top candies of 2024.</p>
+                <div class="links">
+                    <a href="https://jeremphia.github.io/All-about-Candy/" target="_blank">View website</a>
+                    <a href="https://github.com/Jeremphia/All-about-Candy" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <!-- <div class="card">
+                <img src="https://cloud-i5xh1ur4p-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Gabriel's Website</h3>
+                <p>Grade 6</p>
+                <p>My website's purpose is to make people like mangoes.</p>
+                <div class="links">
+                    <a href="https://jeremphia.github.io/All-about-Candy/" target="_blank">View website</a>
+                    <a href="https://github.com/Jeremphia/All-about-Candy" target="_blank">GitHub repository</a>
+                </div>
+            </div> -->
+            <div class="card">
+                <img src="https://cloud-ia91tf4vk-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Shubhan's Website</h3>
+                <p>Grade 6</p>
+                <p>My website talks about bananas and as a few suprises at the end</p>
+                <div class="links">
+                    <a href="https://please-eat-pie-main-account.github.io/BUTTON/" target="_blank">View website</a>
+                    <a href="https://github.com/please-eat-pie-main-account/BUTTON" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-frurx1vdf-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Lauren's Website</h3>
+                <p>Grade 6</p>
+                <p>My website introduces my pet guinea pigs and shares few fun facts about them.</p>
+                <div class="links">
+                    <a href="https://bagelmuff.github.io/website/" target="_blank">View website</a>
+                    <a href="https://github.com/bagelmuff/website" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-g798wj5it-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Katerina's Website</h3>
+                <p>Grade 6</p>
+                <p>My website is a website for looking at images of cats</p>
+                <div class="links">
+                    <a href="https://ckierun5.github.io/A-place/" target="_blank">View website</a>
+                    <a href="https://github.com/CkieRun5/A-place" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-nf45idtzt-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Adwit's Website</h3>
+                <p>Grade 6</p>
+                <p>My website helps people study for their weekly spelling quiz</p>
+                <div class="links">
+                    <a href="https://mrplip123.github.io/HackClub/" target="_blank">View website</a>
+                    <a href="https://github.com/Mrplip123/HackClub" target="_blank">GitHub repository</a>
+                </div>
+            </div>
         </div>
     </div>
 
