--- a/index.html
+++ b/index.html
@@ -249,10 +249,20 @@
                 <img src="https://cloud-mfyb2dov7-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Milana's Website</h3>
                 <p>Grade 8</p>
-                <p>mMy website teaches people about what you need to own a hamster.</p>
+                <p>My website teaches people about what you need to own a hamster.</p>
                 <div class="links">
                     <a href="https://sapphireripple.github.io/fun/" target="_blank">View website</a>
                     <a href="https://github.com/SapphireRipple/fun" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-mfyb2dov7-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Alexia's Website</h3>
+                <p>Grade 8</p>
+                <p>Using my website, you can adopt a new budgie friend!</p>
+                <div class="links">
+                    <a href="https://lexibudgies.github.io/Adopt-A-Budgie-Website-/" target="_blank">View website</a>
+                    <a href="https://github.com/LexiBudgies/Adopt-A-Budgie-Website-" target="_blank">GitHub repository</a>
                 </div>
             </div>
 
@@ -498,6 +508,16 @@
                 </div>
             </div>
             <div class="card">
+                <img src="https://cloud-lwdnaz0fg-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Jayden's Website</h3>
+                <p>Grade 7</p>
+                <p>My website is about my friend evan<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://mylice.github.io/google.com/" target="_blank">View website</a>
+                    <a href="https://github.com/mylice/google.com" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
                 <img src="https://cloud-dvstv55v5-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Deeksha's Website</h3>
                 <p>Grade 7</p>
@@ -557,7 +577,7 @@
                     <a href="https://github.com/Just4im/Hxck-Club" target="_blank">GitHub repository</a>
                 </div>
             </div>
-
+            
             <!-- Grade 6 -->
             <div class="card">
                 <img src="https://cloud-hyg1f5awe-hack-club-bot.vercel.app/0image.png" alt="">
@@ -629,6 +649,16 @@
                     <a href="https://github.com/Jeremphia/All-about-Candy" target="_blank">GitHub repository</a>
                 </div>
             </div>
+            <div class="card">
+                <img src="https://cloud-nf45idtzt-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Adwit's Website</h3>
+                <p>Grade 6</p>
+                <p>My website helps people study for their weekly spelling quiz</p>
+                <div class="links">
+                    <a href="https://mrplip123.github.io/HackClub/" target="_blank">View website</a>
+                    <a href="https://github.com/Mrplip123/HackClub" target="_blank">GitHub repository</a>
+                </div>
+            </div>
             <!-- <div class="card">
                 <img src="https://cloud-i5xh1ur4p-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Gabriel's Website</h3>
@@ -669,16 +699,7 @@
                     <a href="https://github.com/CkieRun5/A-place" target="_blank">GitHub repository</a>
                 </div>
             </div>
-            <div class="card">
-                <img src="https://cloud-nf45idtzt-hack-club-bot.vercel.app/0image.png" alt="">
-                <h3>Adwit's Website</h3>
-                <p>Grade 6</p>
-                <p>My website helps people study for their weekly spelling quiz</p>
-                <div class="links">
-                    <a href="https://mrplip123.github.io/HackClub/" target="_blank">View website</a>
-                    <a href="https://github.com/Mrplip123/HackClub" target="_blank">GitHub repository</a>
-                </div>
-            </div>
+            
         </div>
     </div>
 
