--- a/index.html
+++ b/index.html
@@ -236,6 +236,16 @@
                 </div>
             </div>
             <div class="card">
+                <img src="https://cloud-kbqiftvua-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Rachel's Website</h3>
+                <p>Grade 8</p>
+                <p>To provide people with a wide range of breakfast recipes.</p>
+                <div class="links">
+                    <a href="https://jrachel-kim.github.io/Hack-Club/" target="_blank">View website</a>
+                    <a href="https://github.com/JRachel-Kim/Hack-Club" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
                 <img src="https://cloud-ayu8aelj0-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Elliana's Website</h3>
                 <p>Grade 8</p>
@@ -263,6 +273,16 @@
                 <div class="links">
                     <a href="https://lexibudgies.github.io/Adopt-A-Budgie-Website-/" target="_blank">View website</a>
                     <a href="https://github.com/LexiBudgies/Adopt-A-Budgie-Website-" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-g11xab0mr-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Warden's Website</h3>
+                <p>Grade 8</p>
+                <p>cooking recipies<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://wardenh.github.io/WardenWeb/" target="_blank">View website</a>
+                    <a href="https://github.com/WardenH/WardenWeb" target="_blank">GitHub repository</a>
                 </div>
             </div>
 
@@ -577,6 +597,36 @@
                     <a href="https://github.com/Just4im/Hxck-Club" target="_blank">GitHub repository</a>
                 </div>
             </div>
+            <div class="card">
+                <img src="https://cloud-ibsudla3h-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Watson's Website</h3>
+                <p>Grade 7</p>
+                <p>How to make pickles<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://dillpicklewy.github.io/dill_pickle_Hack_Club/" target="_blank">View website</a>
+                    <a href="https://github.com/dillpickleWY/dill_pickle_Hack_Club" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-ambbwae01-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Tejas' Website</h3>
+                <p>Grade 7</p>
+                <p>My Website is about Lego and my favourite Lego sets</p>
+                <div class="links">
+                    <a href="https://alwaysflex.github.io/Cool-Website/" target="_blank">View website</a>
+                    <a href="https://github.com/AlwaysFlex/Cool-Website" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-mixeyqxy8-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Tate's Website</h3>
+                <p>Grade 7</p>
+                <p>My website is about video games.</p>
+                <div class="links">
+                    <a href="https://t2000n.github.io/abc/" target="_blank">View website</a>
+                    <a href="https://github.com/T2000N/abc" target="_blank">GitHub repository</a>
+                </div>
+            </div>
             
             <!-- Grade 6 -->
             <div class="card">
@@ -659,16 +709,16 @@
                     <a href="https://github.com/Mrplip123/HackClub" target="_blank">GitHub repository</a>
                 </div>
             </div>
-            <!-- <div class="card">
-                <img src="https://cloud-i5xh1ur4p-hack-club-bot.vercel.app/0image.png" alt="">
+            <div class="card">
+                <img src="https://cloud-oc19qfkmy-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Gabriel's Website</h3>
                 <p>Grade 6</p>
                 <p>My website's purpose is to make people like mangoes.</p>
                 <div class="links">
-                    <a href="https://jeremphia.github.io/All-about-Candy/" target="_blank">View website</a>
-                    <a href="https://github.com/Jeremphia/All-about-Candy" target="_blank">GitHub repository</a>
+                    <a href="https://gabe-ai-glitch.github.io/PersonalWebsite/" target="_blank">View website</a>
+                    <a href="https://github.com/Gabe-ai-glitch/PersonalWebsite" target="_blank">GitHub repository</a>
                 </div>
-            </div> -->
+            </div>
             <div class="card">
                 <img src="https://cloud-ia91tf4vk-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Shubhan's Website</h3>
