--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
                 </div>
             </div>
 
-            <!-- <div class="card">
-                <img src="https://cloud-7h8ahl1fh-hack-club-bot.vercel.app/0image.png" alt="">
+            <div class="card">
+                <img src="https://cloud-p5ihdtgur-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>David's Website</h3>
                 <p>Grade 8</p>
                 <p>My website teaches people how to play tetris.</p>
                 <div class="links">
-                    <a href="https://davidxiao18.github.io/TetrisTutorial/" target="_blank">View website</a>
-                    <a href="https://github.com/DavidXiao18/TetrisTutorial/tree/main" target="_blank">GitHub repository</a>
+                    <a href="https://davidxiao18.github.io/TetrisCode/" target="_blank">View website</a>
+                    <a href="https://github.com/DavidXiao18/TetrisCode/" target="_blank">GitHub repository</a>
                 </div>
-            </div> -->
+            </div>
 
             <div class="card">
                 <img src="https://cloud-ond0uqmrs-hack-club-bot.vercel.app/0image.png" alt="">
@@ -283,6 +283,36 @@
                 <div class="links">
                     <a href="https://wardenh.github.io/WardenWeb/" target="_blank">View website</a>
                     <a href="https://github.com/WardenH/WardenWeb" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-6ha9nufqq-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Emma's Website</h3>
+                <p>Grade 8</p>
+                <p>My websites teaches people how to talk to cats</p>
+                <div class="links">
+                    <a href="https://e1mystery.github.io/Hackclub/" target="_blank">View website</a>
+                    <a href="https://github.com/e1mystery/Hackclub" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-sh39lcljk-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Dennis' Website</h3>
+                <p>Grade 8</p>
+                <p>The purpose of my website is to showcase cute cat</p>
+                <div class="links">
+                    <a href="https://dennisliu3123.github.io/hackclub/" target="_blank">View website</a>
+                    <a href="https://github.com/dennisliu3123/hackclub/" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-k8rd8dwbf-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Mehmet's Website</h3>
+                <p>Grade 8</p>
+                <p>my website is to be able to play fortnite on chromebooks</p>
+                <div class="links">
+                    <a href="https://watenha.github.io/fortnite-on-chromebook/" target="_blank">View website</a>
+                    <a href="https://github.com/watenha/fortnite-on-chromebook" target="_blank">GitHub repository</a>
                 </div>
             </div>
 
@@ -617,6 +647,16 @@
                     <a href="https://github.com/AlwaysFlex/Cool-Website" target="_blank">GitHub repository</a>
                 </div>
             </div>
+            <!-- <div class="card">
+                <img src="https://cloud-mixeyqxy8-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Sooa's Website</h3>
+                <p>Grade 7</p>
+                <p>My website teaches people about gymnastics</p>
+                <div class="links">
+                    <a href="https://cloudy728.github.io/About-Gymnastics/" target="_blank">View website</a>
+                    <a href="https://github.com/Cloudy728/About-Gymnastics" target="_blank">GitHub repository</a>
+                </div>
+            </div> -->
             <div class="card">
                 <img src="https://cloud-mixeyqxy8-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Tate's Website</h3>
